템플릿 수정중

--- a/cinnamon-web-template-basic/src/main/resources/static/index.html
+++ b/cinnamon-web-template-basic/src/main/resources/static/index.html
@@ -50,7 +50,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   |               | sidebar-mini                            |
   |---------------------------------------------------------|
   -->
-<body class="skin-blue sidebar-mini" ng-controller="mainController">
+<body class="skin-blue sidebar-mini">
 	<div wrapper></div>
 	
 	<script type="text/javascript" src="/webjars/angularjs/1.4.3/angular.min.js"></script>
