repository를 spring data 방식으로 변경 + spring data rest 에서 잡힐 수 있는 형태로 변경

--- a/cinnamon-web-template-basic/src/main/resources/static/index.html
+++ b/cinnamon-web-template-basic/src/main/resources/static/index.html
@@ -55,11 +55,13 @@ scratch. This page gets rid of all links and provides the needed markup only.
 	
 	<script type="text/javascript" src="/webjars/angularjs/1.4.3/angular.min.js"></script>
 	<script type="text/javascript" src="/webjars/angular-ui-router/0.2.15/release/angular-ui-router.min.js"></script>
-	<script type="text/javascript" src="/js/main.js"></script>
+	<!-- <script type="text/javascript" src="/js/main.js"></script>
 	<script type="text/javascript" src="/js/directives/header/header.js"></script>
 	<script type="text/javascript" src="/js/directives/sidebar/sidebar.js"></script>
 	<script type="text/javascript" src="/js/directives/footer/footer.js"></script>
 	<script type="text/javascript" src="/js/directives/controlSidebar/controlSidebar.js"></script>
-	<script type="text/javascript" src="/js/directives/wrapper/wrapper.js"></script>
+	<script type="text/javascript" src="/js/directives/wrapper/wrapper.js"></script> -->
+	
+	<script type="text/javascript" src="all.js"></script>
 </body>
 </html>
