--- a/cinnamon-web-template-basic/src/main/resources/static/js/directives/header/header.tpl.html
+++ b/cinnamon-web-template-basic/src/main/resources/static/js/directives/header/header.tpl.html
@@ -9,7 +9,8 @@
 	<!-- Header Navbar -->
 	<nav class="navbar navbar-static-top" role="navigation">
 		<!-- Sidebar toggle button-->
-		<a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button"> <span class="sr-only">Toggle navigation</span>
+		<a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button" ng-click="toggleSidebar()">
+			<span class="sr-only">Toggle navigation</span>
 		</a>
 		<!-- Navbar Right Menu -->
 		<div class="navbar-custom-menu">
