--- a/cinnamon-core-template/src/main/resources/static/js/directives/header/header.tpl.html
+++ b/cinnamon-core-template/src/main/resources/static/js/directives/header/header.tpl.html
@@ -102,15 +102,15 @@
 				<!-- User Account Menu -->
 				<li class="user-menu" dropdown>
 					<!-- Menu Toggle Button -->
-					<a href="#" dropdown-toggle>
+					<a href="" dropdown-toggle>
 						<!-- The user image in the navbar-->
-						<img src="/webjars/adminlte/2.3.0/dist/img/user2-160x160.jpg" class="user-image" alt="User Image" />
+						<img src="/webjars/adminlte/2.3.2/dist/img/user2-160x160.jpg" class="user-image" alt="User Image" />
 						<!-- hidden-xs hides the username on small devices so only the image appears. -->
 						<span class="hidden-xs">Alexander Pierce</span>
 					</a>
 					<ul class="dropdown-menu">
 						<!-- The user image in the menu -->
-						<li class="user-header"><img src="/webjars/adminlte/2.3.0/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
+						<li class="user-header"><img src="/webjars/adminlte/2.3.2/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
 							<p>
 								Alexander Pierce - Web Developer <small>Member since Nov. 2012</small>
 							</p></li>
