--- a/cinnamon-core-template/src/main/resources/static/js/directives/sidebar/sidebar.tpl.html
+++ b/cinnamon-core-template/src/main/resources/static/js/directives/sidebar/sidebar.tpl.html
@@ -5,18 +5,18 @@
 		<!-- Sidebar user panel (optional) -->
 		<div class="user-panel">
 			<div class="pull-left image">
-				<img src="/webjars/adminlte/2.3.0/dist/img/user2-160x160.jpg" class="img-circle"
+				<img src="/webjars/adminlte/2.3.2/dist/img/user2-160x160.jpg" class="img-circle"
 					alt="User Image" />
 			</div>
 			<div class="pull-left info">
 				<p>Alexander Pierce</p>
 				<!-- Status -->
-				<a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+				<a href=""><i class="fa fa-circle text-success"></i> Online</a>
 			</div>
 		</div>
 	
 		<!-- search form (Optional) -->
-		<form action="#" method="get" class="sidebar-form">
+		<form action="" method="get" class="sidebar-form">
 			<div class="input-group">
 				<input type="text" name="q" class="form-control"
 					placeholder="Search..." /> <span class="input-group-btn">
@@ -28,26 +28,36 @@
 			</div>
 		</form>
 		<!-- /.search form -->
-		
 		<!-- Sidebar Menu -->
 		<ul class="sidebar-menu">
-			<li ng-repeat="menu in menus" ng-class="">
-				<a href="">
+			<li ng-repeat="menu in menus" ng-class="menuLiClass(menu)" ng-click="toggleShowChild(menu)">
+				<a href="" ng-href="{{menu.uri}}" target="_self">
 					<i ng-class="menu.iconClass"></i> <span>{{menu.name}}</span>
+					<i ng-if="menu.childs != 0" class="fa fa-angle-left pull-right"></i>
 				</a>
+				<ul class="treeview-menu animated fadeIn" ng-if="menu.childs != 0">
+					<li ng-repeat="child in menu.childs">
+						<a href="">
+							<i ng-class="child.iconClass"></i> {{child.name}}
+						</a>
+					</li>
+				</ul>
 			</li>
 			
-			<li class="header">HEADER</li>
-			<!-- Optionally, you can add icons to the links -->
-			<li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
-			<li><a href="#"><i class="fa fa-link"></i> <span>Another
-						Link</span></a></li>
-			<li class="treeview"><a href="#"><i class="fa fa-link"></i> <span>Multilevel</span>
-					<i class="fa fa-angle-left pull-right"></i></a>
+			<!-- <li class="header">HEADER</li>
+			Optionally, you can add icons to the links
+			<li class="active"><a href=""><i class="fa fa-link"></i> <span>Link</span></a></li>
+			<li><a href=""><i class="fa fa-link"></i> <span>Another Link</span></a></li>
+			<li class="treeview">
+				<a href="">
+					<i class="fa fa-link"></i> <span>Multilevel</span>
+					<i class="fa fa-angle-left pull-right"></i>
+				</a>
 				<ul class="treeview-menu">
-					<li><a href="#">Link in level 2</a></li>
-					<li><a href="#">Link in level 2</a></li>
-				</ul></li>
+					<li><a href="">Link in level 2</a></li>
+					<li><a href="">Link in level 2</a></li>
+				</ul>
+			</li> -->
 		</ul>
 		<!-- /.sidebar-menu -->
 	</section>
