npm설정을 통해 initWizard페이지로 넘어가는동작 테스트중

--- a/cinnamon-starter/src/main/resources/static/index.html
+++ b/cinnamon-starter/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
 <base href="/" />
 </head>
 <body>
-	<appMain>loading...</appMain>
+	<app-main>loading...</app-main>
 	<script src="/js/app.index.bundle.js"></script>
 </body>
 </html>
